src/main/resources/scss/profile/components/_memberships.scss
.profile-memberships-container {
	display: none; // hidden on narrow view.
}

.memberships {
	background: #fff;
	padding: 1rem;
	margin: 0.25rem 0;
	margin-top: 0;

	& > h3 {
		font-family: $body-font-family;
		font-size: 1rem;
		color: $secondary-grey;
	}

	& > ul {
		list-style: none;
		margin: 0;
	}

	a.more {
		display: block;
		text-transform: uppercase;
		font-size: .625rem;
		font-weight: 700;
		color: $tertiary-grey;
		text-align: center;
		padding: 0.5rem 1rem;
		margin: -1rem;
		margin-top: 1rem;
		background: $quad-grey;
	}
}

.membership {
	$avatar-size: 3rem;

	img, svg {
		width: $avatar-size;
		height: $avatar-size;
		float: left;
		margin-bottom: .25rem;

		& + * {
			margin: 0.5rem 0 0 $avatar-size + .25rem;
			display: block;
			min-height: 2em;
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
		}
	}

	a {
		color: $body-font-color;
		font-size: .875rem;
		font-weight: 600;
		line-height: 1;

		display: block;
		position: relative;
		overflow: hidden;
	}
}

//Memberships page.
.profile > .profile-memberships {
	background: #fff;

	.memberships {

		& > ul {
			display: flex;
			flex-wrap: wrap;
			align-content: flex-start;
			margin: 0 -0.25rem;
		}

		.membership {
			overflow: hidden;
			margin: .25rem;
			flex: 0 1 calc(50% - 0.5rem);
			@media all and (min-width: 600px) {
				flex-basis: calc(33% - 0.5rem);
			}

			border-radius: 3px;
			box-shadow: 0 0 0 0.0625rem $tertiary-grey;
			background: $quad-grey;
		}

	}
}

